--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.5.1",
     "react-select": "^5.10.1",
-    "tailwindcss": "^4.1.4",
-    "proxy": "https://backend-server-for-humanaiproject001.onrender.com"
+    "tailwindcss": "^4.1.4"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
