--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.6.0",
     "@tailwindcss/vite": "^4.1.4",
+    "firebase": "^11.6.0",
+    "proxy": "",
     "react": "^19.0.0",
     "react-dom": "^19.1.0",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.5.1",
     "react-select": "^5.10.1",
-    "tailwindcss": "^4.1.4"
-
+    "tailwindcss": "^4.1.4",
+    "vite": "^6.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
