update .env files

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 VITE_API_URL=https://backend-server-for-humanaiproject001.onrender.com
+
+VITE_FIREBASE_API_KEY=AIzaSyC8eDuA63oquMTAp_Cf2DxF9RXC2cTmlp4
+VITE_FIREBASE_AUTH_DOMAIN=humanaiproject-ab1d5.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=humanaiproject-ab1d5
+VITE_FIREBASE_STORAGE_BUCKET=humanaiproject-ab1d5.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=925316767904
+VITE_FIREBASE_APP_ID=1:925316767904:web:1a9be37b8715f5b1f4e9c5
+VITE_FIREBASE_MEASUREMENT_ID=G-7CT9Z5JSVQ
