--- a/.gitignore
+++ b/.gitignore
@@ -6,19 +6,34 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-.env
-node_modules
-dist
-dist-ssr
+
+# Dependency directories
+node_modules/
+
+# Build output
+dist/
+dist-ssr/
 *.local
+
+# Environment variables
+.env
+.env.*.local
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# Test coverage
+coverage/
+
+# Deployment folders
+.vercel/
+.netlify/
+.firebase/
